--- a/templates/emails/password_reset.html
+++ b/templates/emails/password_reset.html
@@ -40,11 +40,11 @@
 <body>
     <div class="email-container">
         <h1>Welcome to alx-connect!</h1>
-        <p>Thank you for registering with us. To verify your email address, please follow the link below:</p>
-        <div class="verification-code">{{ verification_url }}</div>
-        <p>If you didn't request this verification, please ignore this email.</p>
+        <p>Follow the link below to reset your password:</p>
+        <div class="verification-code">{{ password_reset_url }}</div>
+        <p>If you didn't request to reset your password, please ignore this email.</p>
         <div class="footer">
-            <p>&copy; {{ current_year }} alx-connect. All rights reserved.</p>
+            <p>&copy; {{ current_year }} Our Service. All rights reserved.</p>
         </div>
     </div>
 </body>
